dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital-dev
  labels:
    app.kubernetes.io/managed-by: argocd
