dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-dashboard
  namespace: hospital-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-dashboard
  template:
    metadata:
      labels:
        app: hospital-dashboard
    spec:
      containers:
      - name: nginx
        image: registry.access.redhat.com/ubi9/nginx-122:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      volumes:
      - name: html
        configMap:
          name: hospital-dashboard-html
