dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-dashboard
  namespace: hospital-dev
spec:
  selector:
    app: hospital-dashboard
  ports:
  - port: 8080
    targetPort: 8080
