dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hospital-dashboard
  namespace: hospital-dev
spec:
  to:
    kind: Service
    name: hospital-dashboard
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
